tests/custom/STARIS_2022/operation-type-errors/toSet-type-error/stderr.expected
Error:
    Parser error in file: toSet-type-error.essence Error is:
ValidatorError toSet-type-error.essence:2:22:
  |
2 | such that b = (toSet(false) = {2, 3, 2})
  |                      ^^^^^
Type error:
	Expected:"Matrix ,list,function,relation,mset "
	Got: bool

